crates/index-scheduler/src/snapshots/index_scheduler__tests__import_vectors-15.snap
---
source: index-scheduler/src/lib.rs
expression: doc
---
{
  "doggo": "Intel",
  "breed": "beagle",
  "_vectors": {
    "noise": [
      0.1,
      0.2,
      0.3
    ]
  }
}
