crates/index-scheduler/src/snapshots/index_scheduler__tests__import_vectors-22.snap
---
source: index-scheduler/src/lib.rs
expression: doc
---
{
  "doggo": "kefir",
  "breed": "patou",
  "_vectors": {
    "noise": [
      0.1,
      0.2,
      0.3
    ]
  }
}
