crates/index-scheduler/src/snapshots/index_scheduler__tests__settings_update-5.snap
---
source: index-scheduler/src/lib.rs
expression: config.embedder_options
---
{
  "Rest": {
    "api_key": "My super secret",
    "distribution": null,
    "dimensions": 4,
    "url": "http://localhost:7777",
    "request": "{{text}}",
    "response": "{{embedding}}",
    "headers": {}
  }
}
