crates/index-scheduler/src/snapshots/index_scheduler__tests__settings_update.snap
---
source: index-scheduler/src/lib.rs
expression: task.details
---
{
  "embedders": {
    "default": {
      "source": "rest",
      "apiKey": "MyXXXX...",
      "dimensions": 4,
      "url": "http://localhost:7777",
      "request": "{{text}}",
      "response": "{{embedding}}"
    }
  }
}
